[project]
name = "goit-ds-hw-01"
version = "0.1.0"
description = "Assistant bot project"
authors = [
    {name = "Roman"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
